--- a/app/src/main/res/layout/stage1.xml
+++ b/app/src/main/res/layout/stage1.xml
@@ -4,19 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <HorizontalScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/horizontalScrollView1"
-    tools:context=".Stage1">
+        android:id="@+id/horizontalScrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".Stage1"
+        tools:ignore="SpeakableTextPresentCheck">
+
         <LinearLayout
             android:id="@+id/st1_bg"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/main1"
-            android:orientation="horizontal"
-        ></LinearLayout>
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/keyBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:onClick="onKeyBtn"
+                android:text="KEY"
+                android:translationX="600dp"
+                android:translationY="320dp" />
+        </LinearLayout>
     </HorizontalScrollView>
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
@@ -29,6 +43,33 @@
         android:padding="16dp"
         android:tag="1"
         android:text="아무 스토리 1번"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/inventory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onInBtn"
+        android:text="인벤토리" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="142dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:alpha="0.7"
+        android:background="@android:color/black"
+        android:padding="16dp"
+        android:tag="1"
+        android:visibility="invisible"
+        android:text=""
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView1"
