--- a/app/src/main/res/layout/inventory.xml
+++ b/app/src/main/res/layout/inventory.xml
@@ -51,10 +51,10 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="36dp"
                 android:layout_marginEnd="35dp"
-                android:background="@color/white"
+                android:background="@color/black"
                 android:onClick="onExitBtn"
                 android:text="나가기"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
         </RelativeLayout>
     </LinearLayout>
 
