--- a/app/src/main/res/layout/stage1.xml
+++ b/app/src/main/res/layout/stage1.xml
@@ -17,17 +17,31 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/main1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/chestBtn"
+                android:layout_width="100dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:drawable/stat_notify_sdcard"
+                android:onClick="onChestBtn"
+                android:text="상자"
+                android:translationX="200dp"
+                android:translationY="360dp" />
 
             <Button
                 android:id="@+id/keyBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="35dp"
+                android:layout_height="80dp"
                 android:layout_weight="0"
+                android:background="@drawable/img"
                 android:onClick="onKeyBtn"
-                android:text="KEY"
+                android:rotationX="0"
+                android:text="열쇠"
                 android:translationX="600dp"
                 android:translationY="320dp" />
+
         </LinearLayout>
     </HorizontalScrollView>
 
