--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="298dp"
-        android:text="project_room"
+        android:text="Recycle_Bin"
         android:textSize="65sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
