--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:context=".MainActivity">
     <Button
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
@@ -24,8 +23,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="298dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="215dp"
         android:text="Recycle_Bin"
         android:textSize="65sp"
         android:visibility="visible"
