--- a/app/src/main/res/layout/stage1.xml
+++ b/app/src/main/res/layout/stage1.xml
@@ -19,28 +19,36 @@
             android:background="@drawable/main1"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/chestBtn"
-                android:layout_width="100dp"
-                android:layout_height="80dp"
-                android:layout_weight="0"
-                android:background="@android:drawable/stat_notify_sdcard"
-                android:onClick="onChestBtn"
-                android:text="상자"
-                android:translationX="200dp"
-                android:translationY="360dp" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/keyBtn"
-                android:layout_width="35dp"
-                android:layout_height="80dp"
-                android:layout_weight="0"
-                android:background="@drawable/img"
-                android:onClick="onKeyBtn"
-                android:rotationX="0"
-                android:text="열쇠"
-                android:translationX="600dp"
-                android:translationY="320dp" />
+                <Button
+                    android:id="@+id/keyBtn"
+                    android:layout_width="35dp"
+                    android:layout_height="80dp"
+                    android:layout_marginEnd="236dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_weight="0"
+                    android:background="@drawable/img"
+                    android:onClick="onKeyBtn"
+                    android:text="열쇠"
+                    app:layout_constraintBottom_toTopOf="@+id/chestBtn"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <Button
+                    android:id="@+id/chestBtn"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:layout_marginStart="215dp"
+                    android:layout_marginBottom="203dp"
+                    android:layout_weight="0"
+                    android:background="@android:drawable/stat_notify_sdcard"
+                    android:onClick="onChestBtn"
+                    android:text="상자"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
     </HorizontalScrollView>
@@ -55,7 +63,6 @@
         android:alpha="0.7"
         android:background="@android:color/black"
         android:padding="16dp"
-        android:tag="1"
         android:text="아무 스토리 1번"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -69,7 +76,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onInBtn"
-        android:text="인벤토리" />
+        android:text="인벤토리"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView2"
@@ -81,7 +89,6 @@
         android:alpha="0.7"
         android:background="@android:color/black"
         android:padding="16dp"
-        android:tag="1"
         android:visibility="invisible"
         android:text=""
         android:textColor="@android:color/white"
