npc 패치 (완료) -검 이미지 추가 -무기 강화 추가 -엔딩 스테이지 추가

--- a/app/src/main/res/layout/npc.xml
+++ b/app/src/main/res/layout/npc.xml
@@ -45,9 +45,9 @@
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/img"
+            android:background="@drawable/sword"
             android:onClick="onB"
-            android:text="검" />
+            android:text="" />
 
         <Button
             android:id="@+id/b1"
@@ -118,6 +118,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.182" />
+        app:layout_constraintVertical_bias="0.191" />
+
+    <Button
+        android:id="@+id/stone1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="30dp"
+        android:text=""
+        android:visibility="invisible"
+        android:background="@drawable/resource_null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.221" />
+
+    <Button
+        android:id="@+id/stone2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="30dp"
+        android:text=""
+        android:visibility="invisible"
+        android:background="@drawable/resource_null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.221" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
