--- a/app/src/main/res/layout/stage3.xml
+++ b/app/src/main/res/layout/stage3.xml
@@ -33,9 +33,8 @@
                         android:layout_height="138dp"
                         android:layout_marginStart="504dp"
                         android:layout_marginBottom="264dp"
-                        android:background="@drawable/img"
+                        android:background="@drawable/sword2"
                         android:onClick="onSwordBtn"
-                        android:text="검"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
 
@@ -44,8 +43,8 @@
                         android:layout_width="47dp"
                         android:layout_height="24dp"
                         android:layout_marginStart="768dp"
+                        android:background="@drawable/button"
                         android:onClick="onBtn"
-                        android:text="버튼"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -57,21 +56,20 @@
                         android:layout_height="99dp"
                         android:layout_marginStart="1240dp"
                         android:layout_marginBottom="448dp"
+                        android:background="@drawable/skeleton"
                         android:onClick="onMonsterBtn"
-                        android:text="몬스터 "
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <Button
-                        android:id="@+id/chest"
+                        android:id="@+id/safe"
                         android:layout_width="69dp"
                         android:layout_height="49dp"
                         android:layout_marginStart="856dp"
                         android:layout_marginBottom="448dp"
-                        android:background="@android:drawable/stat_notify_sdcard"
-                        android:onClick="onChestBtn"
-                        android:text="상자"
+                        android:background="@drawable/safe"
+                        android:onClick="onSafeBtn"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
 
@@ -81,9 +79,9 @@
                         android:layout_height="107dp"
                         android:layout_marginStart="600dp"
                         android:layout_marginBottom="292dp"
+                        android:background="@drawable/portal"
                         android:alpha="0"
                         android:onClick="onPortalBtn"
-                        android:text="포털"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
 
