--- a/app/src/main/res/layout/stage3.xml
+++ b/app/src/main/res/layout/stage3.xml
@@ -16,8 +16,8 @@
 
         <LinearLayout
             android:id="@+id/stage3_bg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@drawable/stage3_bg"
             android:orientation="vertical">
 
@@ -28,8 +28,8 @@
 
                 <Button
                     android:id="@+id/monster"
-                    android:layout_width="74dp"
-                    android:layout_height="134dp"
+                    android:layout_width="101dp"
+                    android:layout_height="177dp"
                     android:layout_marginStart="964dp"
                     android:layout_marginBottom="392dp"
                     android:background="@drawable/skeleton"
@@ -52,8 +52,8 @@
 
                 <Button
                     android:id="@+id/portal"
-                    android:layout_width="83dp"
-                    android:layout_height="80dp"
+                    android:layout_width="126dp"
+                    android:layout_height="140dp"
                     android:layout_marginStart="296dp"
                     android:layout_marginBottom="36dp"
                     android:alpha="0"
@@ -64,24 +64,24 @@
 
                 <Button
                     android:id="@+id/button"
-                    android:layout_width="0dp"
-                    android:layout_height="17dp"
+                    android:layout_width="40dp"
+                    android:layout_height="39dp"
                     android:layout_marginEnd="1692dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="16dp"
                     android:background="@drawable/button"
                     android:onClick="onBtn"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/sword"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
                 <Button
                     android:id="@+id/sword"
-                    android:layout_width="0dp"
-                    android:layout_height="69dp"
+                    android:layout_width="31dp"
+                    android:layout_height="103dp"
                     android:layout_marginStart="216dp"
                     android:layout_marginEnd="144dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="16dp"
                     android:alpha="0"
                     android:background="@drawable/sword2"
                     android:onClick="onSwordBtn"
