--- a/app/src/main/res/layout/stage3.xml
+++ b/app/src/main/res/layout/stage3.xml
@@ -10,9 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Stage3"
-        tools:ignore="SpeakableTextPresentCheck"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="-73dp">
+        tools:ignore="SpeakableTextPresentCheck">
 
         <LinearLayout
             android:id="@+id/stage3_bg"
@@ -23,7 +21,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="971dp">
+                android:layout_height="match_parent">
 
 
                 <Button
@@ -47,30 +45,31 @@
                     android:background="@drawable/safe"
                     android:onClick="onSafeBtn"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <Button
                     android:id="@+id/portal"
                     android:layout_width="66dp"
                     android:layout_height="108dp"
-                    android:layout_marginStart="320dp"
-                    android:layout_marginBottom="72dp"
+                    android:layout_marginStart="404dp"
+                    android:layout_marginBottom="152dp"
                     android:background="@drawable/portal"
                     android:onClick="onPortalBtn"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <Button
                     android:id="@+id/button"
                     android:layout_width="46dp"
                     android:layout_height="22dp"
-                    android:layout_marginEnd="1692dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="872dp"
+                    android:layout_marginBottom="260dp"
                     android:background="@drawable/button"
                     android:onClick="onBtn"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/sword"
                     tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
                 <Button
@@ -79,12 +78,12 @@
                     android:layout_height="99dp"
                     android:layout_marginStart="216dp"
                     android:layout_marginEnd="144dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="340dp"
                     android:background="@drawable/sword2"
                     android:onClick="onSwordBtn"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/button"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
