--- a/app/src/main/res/layout/stage1.xml
+++ b/app/src/main/res/layout/stage1.xml
@@ -55,12 +55,13 @@
 
                     <Button
                         android:id="@+id/passwordBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="100dp"
+                        android:layout_height="120dp"
                         android:layout_marginStart="112dp"
                         android:layout_marginBottom="10dp"
                         android:onClick="onPassWordBtn"
-                        android:text="서랍"
+                        android:background="@drawable/folder"
+                        android:text=""
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.1"
@@ -150,8 +151,7 @@
                     android:id="@+id/fire_point"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:alpha="0.7"
-                    android:rotationX="0"
+                    android:alpha="0.2"
                     android:translationX="165dp"
                     android:translationY="272dp"
                     android:background="@android:drawable/ic_notification_overlay" />
