--- a/app/src/main/res/layout/password5.xml
+++ b/app/src/main/res/layout/password5.xml
@@ -110,7 +110,7 @@
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="103dp"
         android:onClick="input"
-        android:text="n"
+        android:text="t"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button9"
